--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@ Frontend:HTML,CSS Backend:PHP Database:SQL</h3>
 
 <h1>Projects</h1>
     
-    <h2>1.Brain tumor detection by image processing </h2>
+    <h2>Brain tumor detection by image processing </h2>
      <h3>Created GUI to take input MRI images applied necessary algorithms for detecting tumor like 
     threshold segmentation and morphological operations used predefined function in MATLAB.<br>
   <a href="https://github.com/anika16/Brain_tumor_detection">GitHub</a></h3>
-    <h2>2.E-Book Android App</h2>
+    <h2>E-Book Android App</h2>
       <h3>Created an E-Book App in Android Studio used Java, added Splash Screen. 
     E-Book contains brief description of programming languages and skills, created Realtime database on Google Firebase.<br>
   <a href="https://github.com/Coders-12/E-Book">GitHub</a></h3>
