--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="home section active" id="home">
           <div class="container">
             <div class="intro">
-              <img src="anika portfolio website/img/anika.png" class="shadow-dark">
+              <img src="img/anika.png" class="shadow-dark">
               <h1>Anika Kalia</h1>
               <p>3rd Year B.Tech CSE Student at Amity University</p>
               <div class="social-link">
@@ -309,7 +309,7 @@
               <div class="project-item padd-15">
                 <div class="project-item-inner shadow-dark">
                   <div class="project-img">
-                    <img src="anika portfolio website/img/bank.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                    <img src="img/bank.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
                   </div>
                   <div class="project-info">
                     <h4 class="project-title">Basic Banking System</h4>
@@ -326,7 +326,7 @@
               <div class="project-item padd-15">
                 <div class="project-item-inner shadow-dark">
                   <div class="project-img">
-                    <img src="anika portfolio website/img/drums.png" alt="">
+                    <img src="img/drums.png" alt="">
                   </div>
                   <div class="project-info">
                     <h4 class="project-title">Play Drums</h4>
@@ -342,7 +342,7 @@
  <div class="project-item padd-15">
                 <div class="project-item-inner shadow-dark">
                   <div class="project-img">
-                    <img src="anika portfolio website/img/book.jfif" alt="">
+                    <img src="img/book.jfif" alt="">
                   </div>
                   <div class="project-info">
                     <h4 class="project-title">	E-Book</h4>
