--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="home section active" id="home">
           <div class="container">
             <div class="intro">
-              <img src="img/anika.PNG" class="shadow-dark">
+              <img src="img/anika.png" class="shadow-dark">
               <h1>Anika Kalia</h1>
               <p>3rd Year B.Tech CSE Student at Amity University</p>
               <div class="social-link">
