--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <title>Anika Kalia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="red.css" type="text/css">
-    <!-- Theme Switcher -->
-    <link rel="stylesheet" title="purple" class="alternate-style" href="purple.css" type="text/css" disabled>
-    <link rel="stylesheet" title="red" class="alternate-style" href="red.css" type="text/css" disabled>
-    <link rel="stylesheet" title="yellow" class="alternate-style" href="yellow.css" type="text/css" disabled>
-    <link rel="stylesheet" title="green" class="alternate-style" href="green.css" type="text/css" disabled>
-    <link rel="stylesheet" title="blue" class="alternate-style" href="blue.css" type="text/css" disabled>
-    <!-- Theme Switcher End -->
+    <link rel="stylesheet" href="blue.css" type="text/css">
+   
     <link rel="stylesheet" href="themeSwitcher.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
