--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
                   </div>
               </section>
 
+        
               <!-- Contact Section End -->
             </div>
           </div>
@@ -406,6 +407,33 @@
       <!-- Main Content End -->
     </div>
     <!-- Main Container End -->
-   
+    <h5>Theme Switch</h5>
+      <ul>
+        <li> <a href="javascript:void(0);" title="red" style="background-color: #e40017;" onclick="setActiveStyle('red')"></a> </li>
+        <li> <a href="javascript:void(0);" title="blue" style="background-color: #0779e4;" onclick="setActiveStyle('blue')"></a> </li>
+        <li> <a href="javascript:void(0);" title="green" style="background-color: #57d131;" onclick="setActiveStyle('green')"></a> </li>
+        <li> <a href="javascript:void(0);" title="purple" style="background-color: #a100ff;" onclick="setActiveStyle('purple')"></a> </li>
+        <li> <a href="javascript:void(0);" title="yellow" style="background-color: #ffcc00;" onclick="setActiveStyle('yellow')"></a> </li>
+      </ul>
+      <h5>Mode Switch</h5>
+      <label>
+        <input type="radio" class="mode-switch" name="body-mode" value="dark" checked="true">
+        Light
+      </label>
+      <label >
+        <input type="radio" class="mode-switch" name="body-mode" value="light">
+        Dark
+      </label>
+    </div>
+    <!-- Theme Switcher End -->
+    <!-- Template Js -->
+    <script src="script.js">
+
+    </script>
+      <!-- JavaScript for Theme Switcher -->
+      <script src="themeSwitcher.js">
+
+      </script>
+    <!-- JavaScript for Theme Switcher End -->
   </body>
 </html>
