--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="row">
                       <div class="buttons padd-15">
-                        <a href="https://drive.google.com/file/d/144en3RrHWa7EdbzTdcMyTR-pTpu7k12r/view?usp=sharing" download target="_blank"class="btn">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/144en3RrHWa7EdbzTdcMyTR-pTpu7k12r/view?usp=sharing" download target="_blank"class="btn">Resume</a>
                       </div>
                     </div>
                   </div>
