--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3><span>Hello There!</span></h3>
+                    <h3><span>Hi!</span></h3>
                     <p>I'm Anika Kalia. I am currently pursuing my Bachelor Of Technology in Computer Science & Engineering
                       from Amity University, Noida. <br>I'm an AWS Certified Cloud Practitioner</p>
                   </div>
