--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Anika Kalia</title>
+    
+     <link rel = "icon" href = "img/anika_logo.jpg" type = "image/x-icon">
+          
+ 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="blue.css" type="text/css">
