--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Anika Kalia</title>
     
-     <link rel = "icon" href = "img/anika_logo.jpg" type = "image/x-icon">
+     <link rel = "icon" href = "img/anika_logo.PNG" type = "image/x-icon">
           
  
     <meta name="viewport" content="width=device-width, initial-scale=1">
